Added per-person methods in BalanceService
Added methods to calc per-person spending in month, year and alltime
Added better tests for BalanceServiceTest
Added javadoc documentation
Removed useless fields in AccountTest
Removed comments where suggestions have been implemented