@@ -1,9 +1,10 @@
 package it.BruttiF27.balanceManager.model;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-// sono spariti dei commenti che ti avevo lasciato o sono flashato io? solite cose sulle liste immutabili del getter e sul fatto che potrebbe essere un record
+
 public class Account {
 
     // ----- Fields -----
@@ -12,21 +13,15 @@ public class Account {
     private final List<Transaction> transactionList = new ArrayList<>();
 
     // ----- Name methods -----
-    public Account (String name) {
-        this.accountName = Objects.requireNonNull(name);
-    }
+    public Account (String name) { this.accountName = Objects.requireNonNull(name); }
     public String getAccountName () { return this.accountName; }
 
     // ----- Member methods -----
-    public void addMember (Person person) {
-        groupMembers.add(Objects.requireNonNull(person));
-    }
+    public void addMember (Person person) { groupMembers.add(Objects.requireNonNull(person)); }
     public List<Person> getGroupMembers () { return List.copyOf(groupMembers); }
 
     // ----- Transaction methods -----
-    public void addTransaction (Transaction transaction) {
-        transactionList.add(Objects.requireNonNull(transaction));
-    }
-    public List<Transaction> getTransactionList () { return List.copyOf(transactionList); }
+    public void addTransaction (Transaction transaction) { transactionList.add(Objects.requireNonNull(transaction)); }
+    public List<Transaction> getTransactionList () { return Collections.unmodifiableList(transactionList); }
 
 }
